Update from recovered files

--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -15,7 +15,10 @@
             <a class="nav-link" href="/venue">Add Venues<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="http://test.smokin45s.com/shows.html">Shows Page</a>
+            <a class="nav-link" href="/pageupdate">Update page<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="https://test.smokin45s.com/shows.html" target=_new>Shows Page</a>
           </li>
         </ul>
       </div>
