building for docker

--- a/templates/show_layout.html
+++ b/templates/show_layout.html
@@ -23,7 +23,7 @@
 
 	<script type="text/javascript" src="utility.js"></script>
 </head>
-<body class="base_page" background="images/background.jpg" link="white" vlink="white" alink="cyan">
+<body class="base_page" background="images/BannerBackground.png">
 	<div class="menu5">
     <a href=index.html>Home</a>
     <a href=bio.html>Bio</a>
@@ -34,37 +34,7 @@
 	<div class="base_page">
 	<table>
 		<tr valign="top">
-		<td>
-		<table>
-			<tr class="navigation" valign=top>
-			<td width=15% valign=top align=center>
-			<!--# include file="navilinks.inc" virtual="navilinks.inc" -->
-			<!-- top of include -->
-			<img src="images/RetroLogoNoDancers.jpg" alt="The Smokin' 45s" width="70%" vspace="30" align="top"></img>
-			</td>
-			</tr>
-			<tr class="navigation" valign=top>
-			<td width=15% valign=top align=center>
-			<a href="http://www.facebook.com/pages/The-Smokin-45s-Rock-and-Blues-Revue/78129180442" target="new"><img src="images/facebook_logo.jpg" border="0" width="70%"></a>
-			</td>
-			</tr>
-			<tr class="navigation" valign=top>
-			<td width=15% valign=top align=center>
-			<a href="http://www.cdbaby.com/Artist/TheSmokin45s" target="new">Get Smokin' 45s Music</a>
-			</td>
-			</tr>
-			<tr class="navigation" valign=top>
-			<td width=15% valign=top align=center>
-			<a href="http://www.cdbaby.com/cd/thesmokin45s" target="new"><img src="http://images.cdbaby.name/t/h/thesmokin45s_small.jpg" width="70%"></a>	
-			</td>
-			</tr>
-			<tr class="navigation" valign=top>
-			<td width=15% valign=top align=center>
-			<a href="http://www.cdbaby.com/cd/smokin45s" target="new"><img src="http://images.cdbaby.name/s/m/smokin45s_small.jpg" width="70%"></a>
-			</td>
-			</tr>
-		</table>	
-		</td>	
+
 		<td width="80%" align="center">
 		<H2 class="title_text">Upcoming shows</H2>
 		<table border="1" bordercolor="#808080" align="center">
